--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <title>Password | Generator</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/572fcd496c.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="wrapper">
-        <h1 class="heading">Password Generator</h1>
+        <h1>Password Generator</h1>
         <div class="display-container">
             <input type="text" readonly placeholder="password" class="display" id="display">
             <button id="copy-btn">
-                <span id="copy-msg"></span>
+                <span id="copy-msg">copy</span>
                 <i class="fa-solid fa-copy"></i>
             </button>
         </div>
@@ -25,20 +26,20 @@
             </div>
             <input type="range" name="slider" id="slider" step="1" min="1" max="20">
 
-            <div class="checkbox-container">
-                <div class="checkbox">
+            <div>
+                <div>
                     <input type="checkbox"id="uppercase">
                     <label for="uppercase">Includes Uppercase letters</label>
                 </div>
-                <div class="checkbox">
+                <div>
                     <input type="checkbox"id="lowercase">
                     <label for="lowercase">Includes Lowercase letters</label>
                 </div>
-                <div class="checkbox">
+                <div>
                     <input type="checkbox"id="numbers">
                     <label for="numbers">Includes Numbers</label>
                 </div>
-                <div class="checkbox">
+                <div>
                     <input type="checkbox"id="symbols">
                     <label for="symbols">Includes Symbols</label>
                 </div>
@@ -48,7 +49,7 @@
                     <div data-indicator></div>
                 </div>
 
-                <button class="generate-btn" id="btn">Generate Password</button>
+                <button class="generate-btn" id="generate-btn">Generate Password</button>
             </div>
             
         </div>
